# read_pdf_agent

./: .env.example  .gitignore  A2A_QUICKSTART.md  CLEANUP_SUMMARY.md  README.md  __main__.py  a2a_client.py  claude.md  kill_a2a_servers.sh  pyproject.toml  requirements.txt  run_server.sh
FeaturesInstructions/: feature_agent.md
PRPs/: logistics-pdf-extraction-agent.md
app/a2a/: README.md  __init__.py  __main__.py
app/a2a/client_cli/: README.md  __init__.py  __main__.py  client.py  interaction.py
app/adapters/: __init__.py
app/adapters/controllers/: __init__.py  a2a_controller.py
app/adapters/gateways/: __init__.py  langchain_extraction_agent.py
app/adapters/presenters/: __init__.py  a2a_presenter.py
app/application/: __init__.py
app/application/dto/: __init__.py  document_list_dto.py  user_request_dto.py  user_response_dto.py
app/application/exceptions/: __init__.py
app/application/ports/: __init__.py  agent_service.py  extraction_agent.py
app/application/use_cases/: __init__.py  process_user_request.py
app/domain/: __init__.py
app/domain/entities/: __init__.py  document.py  extraction_result.py
app/domain/exceptions/: __init__.py  domain_exceptions.py
app/infrastructure/: __init__.py
app/main/: __init__.py  a2a_main.py  composition_root.py
docs_rag/: 01_PROJECT_OVERVIEW.md  02_CLEAN_ARCHITECTURE_LAYERS.md  03_A2A_PROTOCOL_INTEGRATION.md  04_MCP_INTEGRATION.md  05_EXECUTION_FLOW.md  06_COMMON_ERRORS_AND_FIXES.md  07_EXTENDING_THE_SYSTEM.md  08_DEPLOYMENT_AND_OPERATIONS.md  09_API_REFERENCE.md  10_COMPLETE_SYSTEM_SUMMARY.md
(+15 files in other folders)
